<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.willshex</groupId>
	<artifactId>sandpiles</artifactId>
	<packaging>war</packaging>
	<version>1</version>
	<name>Sandpiles</name>
	<description>Sand piles code based on https://www.youtube.com/watch?v=1MtEUErz7Gg&amp;t=6s</description>

	<!-- App Engine Goals -->
	<!-- mvn help:describe -Dplugin=appengine -->

	<!-- Running with Maven -->
	<!-- mvn clean install -->
	<!-- mvn appengine:devserver_start - start web server -->
	<!-- mvn gwt:run-codeserver - start gwt code server -->
	<!-- goto http://localhost:8080 -->
	<!-- mvn appengine:devserver_stop - stop web server -->

	<properties>
		<!-- GWT -->
		<gwt.version>2.8.0</gwt.version>
		<gwt.style>OBF</gwt.style>

		<!-- App Engine -->
		<appengine.version>1.9.50</appengine.version>

		<!-- Maven -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>

		<plugins>

			<plugin>
				<!-- Don't deploy gwt-user jar to GAE -->
				<artifactId>maven-clean-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<execution>
						<id>default-clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
					<execution>
						<id>remove-gwt-user-jar</id>
						<phase>package</phase>
						<goals>
							<goal>clean</goal>
						</goals>
						<configuration>
							<excludeDefaultDirectories>true</excludeDefaultDirectories>
							<filesets>
								<fileset>
									<directory>${project.build.directory}/${project.build.finalName}/WEB-INF/lib</directory>
									<includes>
										<include>gwt-user*jar</include>
										<include>gwt-dev*jar</include>
									</includes>
								</fileset>
							</filesets>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.1</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>display-dependency-updates</goal>
							<goal>display-plugin-updates</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Ignore GWTTestCases when running JUnit Runner -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18</version>
				<configuration>
					<includes>
						<include>**/*test.java</include>
					</includes>
					<excludes>
						<exclude>**/*GwtTest.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- Mojo's Maven Plugin for GWT -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<version>${gwt.version}</version>
				<configuration>
					<strict>true</strict>

					<testTimeOut>180</testTimeOut>
					<mode>htmlunit</mode>
					<!-- Switch to a suite to run tests faster -->
					<!-- <includes>**/*GwtTestSuite.java</includes> -->
					<!-- <excludes>**/*GwtTest.java</excludes> -->
					<includes>**/*GwtTest.java</includes>

					<extraJvmArgs>-Xmx3G -XX:MaxPermSize=1024M</extraJvmArgs>
					<logLevel>INFO</logLevel>
					<style>${gwt.style}</style>

					<!-- mvn gwt:run-codeserver - won't have to use the bookmarklet -->
					<launcherDir>${project.build.directory}/${project.build.finalName}</launcherDir>

					<runTarget>index.html</runTarget>
					<modules>
						<module>com.willshex.sandpiles.App</module>
					</modules>
				</configuration>
			</plugin>

			<!-- appengine:devserver_start - start web server -->
			<!-- appengine:devserver_stop - stop web server -->
			<plugin>
				<groupId>com.google.appengine</groupId>
				<artifactId>appengine-maven-plugin</artifactId>
				<version>${appengine.version}</version>
				<configuration>
					<enableJarClasses>false</enableJarClasses>
					<!-- Comment in the below snippet to bind to all IPs instead of just localhost -->
					<address>0.0.0.0</address>
					<port>8888</port>
					<!-- Comment in the below snippet to enable local debugging with a remove debugger 
						like those included with Eclipse or IntelliJ -->
					<jvmFlags>
						<jvmFlag>-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag>
					</jvmFlags>
					<version>1</version>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<!-- Eclipse m2e Enhancing -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId>versions-maven-plugin</artifactId>
										<versionRange>[2.1,)</versionRange>
										<goals>
											<goal>display-plugin-updates</goal>
											<goal>display-dependency-updates</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.gwt</groupId>
				<artifactId>gwt</artifactId>
				<version>${gwt.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- GWT -->
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-user</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.gwt</groupId>
			<artifactId>gwt-codeserver</artifactId>
			<scope>provided</scope>
		</dependency>


		<!-- Google App Engine -->
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-api-1.0-sdk</artifactId>
			<version>${appengine.version}</version>
		</dependency>

		<!-- Testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<!-- Other Dependencies -->

		<dependency>
			<groupId>com.willshex</groupId>
			<artifactId>willshex-utility</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>

	</dependencies>

</project>
